plugins/javaFX/testData/highlighting/incorrectPropertyExpressionSyntax.fxml
<?import javafx.scene.control.Label?>
<?import javafx.scene.layout.VBox?>
<?import java.lang.Double?>
<VBox xmlns:fx="http://javafx.com/fxml">
    <fx:define>
        <Label fx:id="barLabel" text="bar"/>
        <Double fx:id="myDouble" fx:value="31.5"/>
    </fx:define>

    <Label text=<error descr="Incorrect expression syntax">"$"</error>
           opacity=<error descr="Incorrect expression syntax">"${}"</error>
           minHeight=<error descr="Incorrect expression syntax">"${.myDouble}"</error>
           maxHeight=<error descr="Incorrect expression syntax">"${myDouble.}"</error>
           prefHeight=<error descr="Incorrect expression syntax">"${"</error>
           minWidth=<error descr="Incorrect expression syntax">"${barLabel..minWidth}"</error>
           maxWidth=<error descr="Incorrect expression syntax">"${barLabel.maxWidth.}"</error>
           prefWidth=<error descr="Incorrect expression syntax">"${.barLabel.maxWidth}"</error>
           alignment=<error descr="Incorrect expression syntax">"${{"</error>
           disable=<error descr="Incorrect expression syntax">"${}}"</error>
           effect=<error descr="Incorrect expression syntax">"$}"</error>
    />
</VBox>
